# TimeAppTracker

./: Cargo.toml  LICENSE  README  README.md  install.sh  time_app.db  time_app_tracker.db  timetracker
ressources/: timetracker.service  timetracker.timer
src/: backend.rs  frontend.rs  main.rs  tui.rs
src/database/: backend.rs  mod.rs  structure.rs
src/ressources/: timetracker.service  timetracker.timer
