[package]
name = "time_app_tracker"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Count the time you spend on the pc and the desired applications"
repository = "https://github.com/fadri14/TimeAppTracker"
readme = "README.md"
keywords = ["time"]

[dependencies]
rusqlite = "0.33.0"
chrono = "0.4.39"
argh = "0.1.13"
notify-rust = "4.11.5"
