[package]
name = "time_app_tracker"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Count the time you spend on the pc and the desired applications"
repository = "https://github.com/fadri14/TimeAppTracker"
readme = "README.md"
keywords = ["time"]

[dependencies]
rusqlite = "0.36.0"
chrono = "0.4.41"
argh = "0.1.13"
notify-rust = "4.11.7"
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-input = "0.12.1"
